Adding README file

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                     
                         <button class="w-100 btn btn-lg btn-primary" type="submit">Calcular +</button>                   
                 </div>
+                <h1 id="SomarResult"></h1>
              </form>
         </div>
 
@@ -98,12 +99,10 @@
              </form>         
         </div>
       </div>
-
         <div class="resultt">
           <h1 class="resultt">Calculadora Noje.js</h1>
           <hr>
         </div>
-
     </main> 
   </body>
 </html>
